In outliner you can click on locked elements using click-drag #72297

Closed
opened 2019-12-09 12:34:27 +01:00 by Michael Soluyanov · 13 comments

System Information
Operating system: Linux-4.15.0-70-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: 26bd5ebd42
Worked: (optional)

Short description of error
In Outliner, you can click on locked elements using click-drag:
{F8201791, size=full}

**System Information** Operating system: Linux-4.15.0-70-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: `26bd5ebd42` Worked: (optional) **Short description of error** In Outliner, you can click on locked elements using click-drag: {[F8201791](https://archive.blender.org/developer/F8201791/Peek_2019-12-09_14-33.gif), size=full}
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

I cannot reproduce it. Is it still an issue in the latest build?

https://builder.blender.org/download/

If yes, then please provide an example that allows us to reproduce the issue more easily.

I cannot reproduce it. Is it still an issue in the latest build? https://builder.blender.org/download/ If yes, then please provide an example that allows us to reproduce the issue more easily.
Author
Member

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'
Author
Member

In #72297#839628, @JacquesLucke wrote:

If yes, then please provide an example that allows us to reproduce the issue more easily.

Sure.

test orphan data.zip

  • Unpack, open Scene.blend.
    {F8251624, size=full}

  • Collection Cube from lib.blend not used and will be removed by default. But I can keep it:

{F8251626, size=full}

> In #72297#839628, @JacquesLucke wrote: > If yes, then please provide an example that allows us to reproduce the issue more easily. Sure. [test orphan data.zip](https://archive.blender.org/developer/F8251623/test_orphan_data.zip) * Unpack, open Scene.blend. {[F8251624](https://archive.blender.org/developer/F8251624/Снимок_экрана_от_2019-12-30_12-08-32.png), size=full} * Collection Cube from lib.blend not used and will be removed by default. But I can keep it: {[F8251626](https://archive.blender.org/developer/F8251626/Peek_2019-12-30_12-10.gif), size=full}

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Added subscriber: @manzanilla

Added subscriber: @manzanilla

Added subscriber: @natecraddock

Added subscriber: @natecraddock

I can reproduce. It does appear that the buttons allow toggling disabled buttons on click+drag; that's an issue that should be fixed (will do that). However in this case I'm wondering if the linked data should be disabled in the first place.

Is there a reason why the linked data shouldn't have a fake user? @JacquesLucke

I can reproduce. It does appear that the buttons allow toggling disabled buttons on click+drag; that's an issue that should be fixed (will do that). However in this case I'm wondering if the linked data should be disabled in the first place. Is there a reason why the linked data shouldn't have a fake user? @JacquesLucke

This issue was referenced by d84dce85f3

This issue was referenced by d84dce85f300a360036129cc8921bc21074e20f6

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Nathan Craddock self-assigned this 2020-08-05 18:51:33 +02:00

Resolved by d84dce85f3

Resolved by d84dce85f3
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72297
No description provided.